--- a/app/views/travel_admin/schedules/_form.html.haml
+++ b/app/views/travel_admin/schedules/_form.html.haml
@@ -8,7 +8,7 @@
         = f.simple_fields_for :price do |fp|
           .row
             .col-md-6
-              = fp.input :price_adult
+              = fp.input_field :price_adult
               = fp.input :price_child
             .col-md-6
               = fp.input :price1
