--- a/app/views/travel_admin/schedules/_orders.html.haml
+++ b/app/views/travel_admin/schedules/_orders.html.haml
@@ -12,9 +12,10 @@
   %tbody
     - biz = Biz::OrderPayment.new
     - orders.includes(:order_detail, :order_price, :bus_seats).each do |order|
-    - biz.caculate_price(order) unless order.order_price
-    - next if order.order_price.num_total == order.bus_seats.count
-      %tr{:id => dom_id order}
+      - biz.caculate_price(order) unless order.order_price
+      - next if order.order_price.num_total == order.bus_seats.count
+
+      %tr{:id => dom_id(order)}
         %td.cell-middle
           = link_to order.order_number, edit_order_path(order), :remote => true
         %td= order.order_detail.full_name if order.order_detail
