--- a/app/views/travel_admin/buses/_form.html.haml
+++ b/app/views/travel_admin/buses/_form.html.haml
@@ -4,47 +4,23 @@
       %button.close{"aria-hidden" => "true", "data-dismiss" => "modal", :type => "button"} ×
       %h4.modal-title#myModalLabel Edit Bus# #{@object.id}
     .modal-body
-      = form_for( @object, :remote => true) do |f|
+      = simple_form_for(@object, :remote => true) do |f|
         .row
           .col-md-6
-            .form-group
-              = f.label :name
-              = f.text_field :name, class: 'form-control'
-            .form-group
-              = f.label :bus_type
-              = f.select(:bus_type, InputType.get_list('bus').collect{|d| [d.type_text, d.type_value]}, {:prompt => 'Select Bus Type'}, class: 'form-control')
-            .form-group
-              = f.label :seats
-              = f.text_field :seats, class: 'form-control'
-            .form-group
-              = f.label :seats_per_row
-              = f.text_field :seats_per_row, class: 'form-control'
-            .form-group
-              = f.label :passengeway
-              = f.text_field :passengeway, class: 'form-control'
-            .form-group
-              = f.label :reserved_seats
-              = f.text_field :reserved_seats, class: 'form-control'
-
+            = f.input :name
+            = f.input :bus_type, collection:  InputType.get_list('bus').collect{|d| [d.type_text, d.type_value]}, prompt: 'Select Bus Type'
+            = f.input :seats
+            = f.input :seats_per_row
+            = f.input :passengeway
+            = f.input :reserved_seats
+            = f.input :status, collection: [['Show', 1],['Hide', 0]]
           .col-md-6
-            .form-group
-              = f.label :company
-              = f.select(:company_id, Company.all.collect{|c| [c.short_name, c.id]}, {:prompt => 'Select Company'}, class: 'form-control')
-            .form-group
-              = f.label :contact_name
-              = f.text_field :contact_name, class: 'form-control'
-            .form-group
-              = f.label :tel
-              = f.text_field :tel, class: 'form-control'
-            .form-group
-              = f.label :plate_number
-              = f.text_field :plate_number, class: 'form-control'
-            .form-group
-              = f.label :vin_number
-              = f.text_field :vin_number, class: 'form-control'
-            .form-group
-              = f.label :inspection_date
-              = f.text_field :inspection_date, :value => formatted_date(@object.inspection_date), :class => 'date-picker form-control'
+            = f.association :company, label_method: :short_name
+            = f.input :contact_name
+            = f.input :tel
+            = f.input :plate_number
+            = f.input :vin_number
+            = f.input :inspection_date, as: :string, input_html: {class: 'date-picker'}
     .modal-footer
       %button.btn{"aria-hidden" => "true", "data-dismiss" => "modal"} Close
       %button.btn.btn-primary{:onclick => "submit_dialog_form(this)"} Save changes
