--- a/app/views/travel_admin/accounts/index.html.haml
+++ b/app/views/travel_admin/accounts/index.html.haml
@@ -5,11 +5,12 @@
       %span.divider /
     %li.active Accounts List
 = content_for :search_box do
-  = form_for( @search, :url => accounts_path ) do |f|
-    .input-prepend.input-append
-      %span.add-on Account
-      = f.text_field :account_brief_contains
-      = search_button
+  = search_form_for(@q, class: 'form-inline') do |f|
+    .col-md-4
+      .input-group
+        = f.text_field :account_brief_cont, class: 'form-control', placeholder: 'Search account'
+        .input-group-btn
+          = search_button
 %section
   = will_paginate(@collection)
   %table#list_accounts.data-list.table.table-bordered.table-striped
@@ -28,3 +29,5 @@
     - @collection.each do |d|
       = render :partial => 'row', :object => d
   = will_paginate(@collection)
+
+
