--- a/app/views/travel_admin/orders/index.html.haml
+++ b/app/views/travel_admin/orders/index.html.haml
@@ -6,10 +6,12 @@
     %li.active All Orders
 = content_for :search_box do
   = search_form_for( @q, class: 'form-inline' ) do |f|
-    .input-prepend.input-append
-      %span.add-on Title
-      = f.text_field :order_number_cont, :class => ''
-      = search_button
+    .col-md-4
+      .input-group
+        = f.text_field :order_number_cont, :class => 'form-control', placeholder: 'Search by Order#'
+        .input-group-btn
+          = search_button
+
 %section
   = will_paginate @collection
   %table#list_orders.data-list.table.table-bordered.table-striped
@@ -25,3 +27,5 @@
       - @collection.each do |order|
         = render :partial => 'row', :object => order
   = will_paginate @collection
+
+
