--- a/app/views/travel_admin/emails/_row.html.haml
+++ b/app/views/travel_admin/emails/_row.html.haml
@@ -1,4 +1,4 @@
-%tr{:id => dom_id row}
+%tr{id: dom_id(row) }
   %td.cell-middle= row.id
   %td= row.email_address
   %td= link_to "#{row.email_data_type}: #{row.email_data_id}", edit_object_url(row.email_data), :remote => true
