--- a/app/views/travel_admin/user_infos/_row.html.haml
+++ b/app/views/travel_admin/user_infos/_row.html.haml
@@ -10,3 +10,4 @@
     = row_link_to_edit row
     = row_link_to_photo user_info_photos_path(row)
     = row_link_to_hide row
+    = link_to 'edit', edit_user_info_path(row), remote: true
