--- a/app/views/travel_admin/user_infos/find.js.erb
+++ b/app/views/travel_admin/user_infos/find.js.erb
@@ -1,5 +1,5 @@
 if ($('#search_user_div').length == 0){
-  $('#dialog_place_holder').append("<div id='search_user_div' class='modal hide fade' aria-hidden='true'></div>");
+  $('body').append("<div id='search_user_div' class='modal fade' aria-hidden='true'></div>");
 }
 
 $('#search_user_div')
