--- a/app/views/travel_admin/addresses/_row.html.haml
+++ b/app/views/travel_admin/addresses/_row.html.haml
@@ -1,4 +1,4 @@
-%tr{:id => dom_id row}
+%tr{id: dom_id(row)}
   %td.cell-middle= row.id
   %td= link_to "#{row.address_data_type}: #{row.address_data_id}", edit_object_url(row.address_data), :remote => true
   %td
