--- a/app/views/travel_admin/tours/_row_gen.html.haml
+++ b/app/views/travel_admin/tours/_row_gen.html.haml
@@ -1,7 +1,7 @@
-%tr{:id => dom_id row_gen}
+%tr{id: dom_id(row_gen)}
   %td
     %label.checkbox.inline
-      %input{:type => "checkbox", :value => "1"}
+      %input{type: "checkbox", value: "1"}
         = row_gen.id
   %td
     = row_gen.description.title
@@ -12,11 +12,11 @@
   %td.cell-middle
     = number_with_precision row_gen.tour_price.price1, :precision => 2
     ,
-    \#{number_with_precision row_gen.tour_price.price2, :precision => 2}
+    = number_with_precision row_gen.tour_price.price2, :precision => 2
     %br/
     = number_with_precision row_gen.tour_price.price3, :precision => 2
     ,
-    \#{number_with_precision row_gen.tour_price.price4, :precision => 2}
+    = number_with_precision row_gen.tour_price.price4, :precision => 2
   %td
     = row_gen.schedules.maximum(:departure_date)
     %br/
@@ -25,6 +25,6 @@
   %td.cell-middle
     = icon_link_to 'generate', gen_tour_path(row_gen), :icon => 'icon-plus', :class => 'btn btn-mini btn-success', :remote => true, :onclick => 'hotline_tr(this);'
     - if defined? @gen_count
-      %br>/
+      %br/
       added:
       %b= @gen_count
