--- a/app/views/travel_admin/home/index.html.haml
+++ b/app/views/travel_admin/home/index.html.haml
@@ -2,7 +2,7 @@
 = link_to 'reset session', reset_app_session_test_path
 
 
-= autocomplete_field_tag 'user_search_field', '', autocomplete_user_info_search_user_infos_path, :update_elements => {:id => '#customer_id' }, class: 'form-control'
+/= autocomplete_field_tag 'user_search_field', '', autocomplete_user_info_search_user_infos_path, :update_elements => {:id => '#customer_id' }, class: 'form-control'
 
 %input{type: 'text', id: 'customer_id'}
 
