--- a/app/views/travel_admin/resource/new.js.erb
+++ b/app/views/travel_admin/resource/new.js.erb
@@ -2,7 +2,7 @@ var edit_div_id = "edit_<%= @object.class.name.underscore %>_div";
 var edit_div = '#' + edit_div_id;
 
 if ($(edit_div).length == 0){
-  $('body').append("<div id='"+ edit_div_id +"' class='modal fade' aria-hidden='true'></div>");
+  $('body').append("<div id='"+ edit_div_id +"' class='modal' data-target='#{edit_div_id}'></div>");
 }
 
 $(edit_div)
