--- a/app/views/travel_admin/tours/index.html.haml
+++ b/app/views/travel_admin/tours/index.html.haml
@@ -9,7 +9,7 @@
     .col-md-6
       .input-group
         .input-group-addon
-          = f.select :tour_type_eq, InputType.get_list('tour').map{|t| [t.type_text, t.type_value]}.insert(0, ['All tours', nil]), {}
+          = f.select :tour_type_eq, InputType.get_list('tour').map{|t| [t.type_text, t.type_value]}.insert(0, ['All tours', nil]), {}, :onchange => "this.form.submit();" 
         = f.text_field :description_title_cont, :class => 'form-control', placeholder: 'Search tours'
         .input-group-btn
           = search_button 
@@ -25,7 +25,6 @@
         %th Icon
         %th Title
         %th Price
-        %th Weekly
         %th op
     %tbody
       - @collection.each do |tour|
