--- a/app/assets/stylesheets/admin/admin.css
+++ b/app/assets/stylesheets/admin/admin.css
@@ -1,4 +1,4 @@
  /*
- *= require jquery.ui.autocomplete
- *= require_tree ./shared
+  *= require jquery-ui/autocomplete
+  *= require_tree ./shared
  */
