--- a/app/views/travel_admin/shared/_main_menu.html.haml
+++ b/app/views/travel_admin/shared/_main_menu.html.haml
@@ -55,11 +55,9 @@
                 %b.caret
               %ul.dropdown-menu
                 %li= link_to t(:employees), docs_employee_infos_path
-                %li.dropdown-submenu
-                  %a{:href => "#"} Data Types
-                  %ul.dropdown-menu
-                    %li= link_to t(:input_types), input_types_path
-                    %li= link_to t(:configurations), app_configurations_path
+                %li.divider
+                %li= link_to t(:input_types), input_types_path
+                %li= link_to t(:configurations), app_configurations_path
           - if has_auth('is_admin')
             %li.dropdown
               %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
