--- a/app/views/layouts/travel_admin/application.html.haml
+++ b/app/views/layouts/travel_admin/application.html.haml
@@ -12,19 +12,19 @@
     %meta{:content => "", :name => "author"}/
     / ================== BEGIN BASE CSS STYLE ==================
     %link{:href => "http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700", :rel => "stylesheet"}/
-    %link{:href => "assets/plugins/jquery-ui-1.10.4/themes/base/minified/jquery-ui.min.css", :rel => "stylesheet"}/
-    %link{:href => "assets/plugins/bootstrap-3.2.0/css/bootstrap.min.css", :rel => "stylesheet"}/
-    %link{:href => "assets/plugins/font-awesome-4.2.0/css/font-awesome.min.css", :rel => "stylesheet"}/
-    %link{:href => "assets/css/animate.min.css", :rel => "stylesheet"}/
-    %link{:href => "assets/css/style.min.css", :rel => "stylesheet"}/
-    %link{:href => "assets/css/style-responsive.min.css", :rel => "stylesheet"}/
-    %link#theme{:href => "assets/css/theme/default.css", :rel => "stylesheet"}/
+    %link{:href => "/admin/assets/plugins/jquery-ui-1.10.4/themes/base/minified/jquery-ui.min.css", :rel => "stylesheet"}/
+    %link{:href => "/admin/assets/plugins/bootstrap-3.2.0/css/bootstrap.min.css", :rel => "stylesheet"}/
+    %link{:href => "/admin/assets/plugins/font-awesome-4.2.0/css/font-awesome.min.css", :rel => "stylesheet"}/
+    %link{:href => "/admin/assets/css/animate.min.css", :rel => "stylesheet"}/
+    %link{:href => "/admin/assets/css/style.min.css", :rel => "stylesheet"}/
+    %link{:href => "/admin/assets/css/style-responsive.min.css", :rel => "stylesheet"}/
+    %link#theme{:href => "/admin/assets/css/theme/default.css", :rel => "stylesheet"}/
     / ================== END BASE CSS STYLE ==================
     / ================== BEGIN PAGE LEVEL STYLE ==================
-    %link{:href => "assets/plugins/jquery-jvectormap/jquery-jvectormap-1.2.2.css", :rel => "stylesheet"}/
-    %link{:href => "assets/plugins/bootstrap-datepicker/css/datepicker.css", :rel => "stylesheet"}/
-    %link{:href => "assets/plugins/bootstrap-datepicker/css/datepicker3.css", :rel => "stylesheet"}/
-    %link{:href => "assets/plugins/gritter/css/jquery.gritter.css", :rel => "stylesheet"}/
+    %link{:href => "/admin/assets/plugins/jquery-jvectormap/jquery-jvectormap-1.2.2.css", :rel => "stylesheet"}/
+    %link{:href => "/admin/assets/plugins/bootstrap-datepicker/css/datepicker.css", :rel => "stylesheet"}/
+    %link{:href => "/admin/assets/plugins/bootstrap-datepicker/css/datepicker3.css", :rel => "stylesheet"}/
+    %link{:href => "/admin/assets/plugins/gritter/css/jquery.gritter.css", :rel => "stylesheet"}/
     / ================== END PAGE LEVEL STYLE ==================
 
   %body
@@ -51,28 +51,28 @@
         %i.fa.fa-angle-up
 
     / ================== BEGIN BASE JS ==================
-    %script{:src => "assets/plugins/jquery-1.8.2/jquery-1.8.2.min.js"}
-    %script{:src => "assets/plugins/jquery-ui-1.10.4/ui/minified/jquery-ui.min.js"}
-    %script{:src => "assets/plugins/bootstrap-3.2.0/js/bootstrap.min.js"}
+    %script{:src => "/admin/assets/plugins/jquery-1.8.2/jquery-1.8.2.min.js"}
+    %script{:src => "/admin/assets/plugins/jquery-ui-1.10.4/ui/minified/jquery-ui.min.js"}
+    %script{:src => "/admin/assets/plugins/bootstrap-3.2.0/js/bootstrap.min.js"}
     /[if lt IE 9]
-      <script src="assets/crossbrowserjs/html5shiv.js"></script>
-      <script src="assets/crossbrowserjs/respond.min.js"></script>
-      <script src="assets/crossbrowserjs/excanvas.min.js"></script>
-    %script{:src => "assets/plugins/slimscroll/jquery.slimscroll.min.js"}
-    %script{:src => "assets/plugins/jquery-cookie/jquery.cookie.js"}
+      <script src="/admin/assets/crossbrowserjs/html5shiv.js"></script>
+      <script src="/admin/assets/crossbrowserjs/respond.min.js"></script>
+      <script src="/admin/assets/crossbrowserjs/excanvas.min.js"></script>
+    %script{:src => "/admin/assets/plugins/slimscroll/jquery.slimscroll.min.js"}
+    %script{:src => "/admin/assets/plugins/jquery-cookie/jquery.cookie.js"}
     / ================== END BASE JS ==================
     / ================== BEGIN PAGE LEVEL JS ==================
-    %script{:src => "assets/plugins/gritter/js/jquery.gritter.js"}
-    %script{:src => "assets/plugins/flot/jquery.flot.min.js"}
-    %script{:src => "assets/plugins/flot/jquery.flot.time.min.js"}
-    %script{:src => "assets/plugins/flot/jquery.flot.resize.min.js"}
-    %script{:src => "assets/plugins/flot/jquery.flot.pie.min.js"}
-    %script{:src => "assets/plugins/sparkline/jquery.sparkline.js"}
-    %script{:src => "assets/plugins/jquery-jvectormap/jquery-jvectormap-1.2.2.min.js"}
-    %script{:src => "assets/plugins/jquery-jvectormap/jquery-jvectormap-world-mill-en.js"}
-    %script{:src => "assets/plugins/bootstrap-datepicker/js/bootstrap-datepicker.js"}
-    %script{:src => "assets/js/dashboard.min.js"}
-    %script{:src => "assets/js/apps.min.js"}
+    %script{:src => "/admin/assets/plugins/gritter/js/jquery.gritter.js"}
+    %script{:src => "/admin/assets/plugins/flot/jquery.flot.min.js"}
+    %script{:src => "/admin/assets/plugins/flot/jquery.flot.time.min.js"}
+    %script{:src => "/admin/assets/plugins/flot/jquery.flot.resize.min.js"}
+    %script{:src => "/admin/assets/plugins/flot/jquery.flot.pie.min.js"}
+    %script{:src => "/admin/assets/plugins/sparkline/jquery.sparkline.js"}
+    %script{:src => "/admin/assets/plugins/jquery-jvectormap/jquery-jvectormap-1.2.2.min.js"}
+    %script{:src => "/admin/assets/plugins/jquery-jvectormap/jquery-jvectormap-world-mill-en.js"}
+    %script{:src => "/admin/assets/plugins/bootstrap-datepicker/js/bootstrap-datepicker.js"}
+    %script{:src => "/admin/assets/js/dashboard.min.js"}
+    %script{:src => "/admin/assets/js/apps.min.js"}
     / ================== END PAGE LEVEL JS ==================
     :javascript
       $(document).ready(function() {
